[package]
name = "app"
version = "0.1.0"
authors = ["user <biyandonk@yahoo.co.id>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nfq = "0.2.4"
etherparse = "0.9.0"
scraper = "0.12.0"
ego-tree = "0.6.2"
tendril = "0.4.2"